# BulletHell

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json
VS/: BulletHell.sln  BulletHell.vcxproj  BulletHell.vcxproj.filters  CMakeLists.txt  VISUAL_STUDIO_README.txt
VS/Post/: CMakeLists.txt
VS/Pre/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/game_time/: CMakeLists.txt  ConstantStep.h  FixedStep.h  FrameCount.h  FrameCounter.h  FrameRateSampler.h  GameClock.cpp  GameClock.h  GameClockBuilder.cpp  GameClockBuilder.h  GameTime.h  LinearAverageSampler.cpp  LinearAverageSampler.h  RunningAverageSampler.cpp  RunningAverageSampler.h  TimeStep.h  VariableStep.h  game_time.h
test/unit_tests/: CMakeLists.txt  test.cpp
